--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             Hi, <br />I'm <span class="home_title-color">Abdullah A S M</span
             ><br />Web Developer
           </h1>
-          <a href="#contact" class="button"> Contact</a>
+          <a href="./form.html" class="button"> Contact</a>
         </div>
 
         <div class="home_social">
