--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-  <title>My Demo Form</title>
+  <title>Contact Form</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&amp;display=swap">
 </head>
@@ -41,14 +41,14 @@
             <button type="submit">Send</button>
           </div>
         
-          <a id="fc-notice" href="https://formcarry.com/">
+<!--           <a id="fc-notice" href="https://formcarry.com/">
             <span>Forms by</span>
             <img
               src="https://carrier.formcarry.com/templates/common/formcarry_footer_logo.svg"
               width="113"
               height="20"
             />
-          </a>
+          </a> -->
         </form>
       </section>
       
