--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             ><i class="bx bxl-twitter"></i
           ></a>
           <a
-            href="#"
+            href="https://github.com/Abdullahasm786"
             class="home_social-icon"
             data-aos="fade-down"
             data-aos-delay="350"
