--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
             ><i class="bx bxl-facebook-circle"></i
           ></a>
           <a
-            href="#"
+            href="https://instagram.com/asm_abdullah_?igshid=MzNlNGNkZWQ4Mg=="
             class="home_social-icon"
             data-aos="fade-down"
             data-aos-delay="250"
             ><i class="bx bxl-instagram"></i
           ></a>
           <a
-            href="#"
+            href="https://twitter.com/Abdulla51862428?t=RZz1S-UzYlTzBNKlxWO8xg&s=08 "
             class="home_social-icon"
             data-aos="fade-down"
             data-aos-delay="300"
