--- a/index.html
+++ b/index.html
@@ -681,10 +681,7 @@
               I'm Abdullah A S M
             </h2>
             <p class="about_text" data-aos="fade-down" data-aos-delay="450">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-              mollitia expedita molestiae consectetur sint doloremque cupiditate
-              ducimus ullam qui? Quo illo repellat incidunt dolor aliquam
-              impedit consectetur, aspernatur neque repellendus.
+              I'm Indian based Web Developer. I like to code things from scratch, and enjoy bringing ideas to life in the browser.
             </p>
           </div>
         </div>
