--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <a href="#work" class="nav_link active">Work</a>
             </li>
             <li class="nav_items">
-              <a href="./form.html" class="nav_link active">Contact</a>
+              <a href="./resume.pdf" class="nav_link active">Contact</a>
 
             </li>
           </ul>
