--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             ><br />Web Developer
           </h1>
           <a href="./form.html" class="button"> Contact</a>
-           <a href="./form.html" class="button"> Resume</a>
+           <a href="https://rxresu.me/abcddummy2000/abdullah/build" class="button"> Resume</a>
         </div>
 
         <div class="home_social">
